--- a/order-book/src/main/resources/application.properties
+++ b/order-book/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=9390
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=yoga
+spring.datasource.password=yoga
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
